css/custom-NEW.css
body {
  padding-top: 50px;
  padding-bottom: 20px;
  background-color: #eeeeee;
  font-family: Lato, Helvetica, sans-serif;
}

hr{
	border-top-color:#fff;
}

a{
	color:#0099cc;
}

a:hover{
	color:#33add6;
	text-decoration: none;
}

/* NAVBAR CONTENT
-------------------------------------------------- */
.navbar-default {
	background-color: #fff;
	border:0px;
	border-bottom: 1px #ddd solid;
	font-weight: 700;
	text-shadow: 0px 1px 1px (204,204,204,.5);
}

.navbar-default .navbar-brand{
	padding:5px 10px 5px 15px;
	min-width: 120px
}
.navbar-default .navbar-brand img{
	max-width: 120px;
}

.navbar-default .navbar-nav > li > a {
	color: #191919;
}
.navbar-default .navbar-nav > li > a:hover, 
.navbar-default .navbar-nav > li > a:focus {
	color: #0099cc;
}
.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus {
	color: #191919;
	background-color: #e6f5fa;
}

/* INDEX JUMBOTRON CONTENT
-------------------------------------------------- */

.jumbotron{
	/*background-color: #0099cc;
	background-image: linear-gradient(to bottom,#0099cc 0,#008ab8 100%);
	background-repeat: repeat-x;
	*/
	background-image: url(../img/cool.jpg);
	background-size: cover;
	background-position: center;
	text-shadow: 1px 1px 2px rgba(0,0,0,.5);
	color:#ffffff;
}

.jumbotron .container{
	padding-left: 0px;
}

.jumbotron .col-lg-8 h1{
	margin:0px 0px 10px 0px;
	font-size: 4em;
	font-weight: bold;
}

.jumbotron .col-lg-8 p{
	font-size: 180%;
	max-width: 690px;
}

.jumbotron .col-lg-4{
	padding-right:0px;
}

.jumbotron .col-lg-4 h2{
	margin-top: 0px;
	font-size: 2em;
}

.jumbotron .col-lg-4 .container{
	padding: 20px 25px 15px 25px;
	margin-left: 5px;
	border-radius: 15px;
	background: #191919;
	opacity: .85;
}

@media (max-width: 767px){
	.jumbotron .col-lg-4 .container{
		width: 365px;
	}
}

.jumbotron .col-lg-4 .container p{
	font-size: 1.2em;
	margin-bottom: 0px
}


/* INDEX BODY CONTENT
-------------------------------------------------- */

.content {
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 0px;
}

.content h1{
	font-weight: bold;
	text-align: center;
	color: #191919;
}

.content .intro-p{
	font-size: 1.2em;
	margin-bottom: 30px;
	text-align: center;
}

.content .col-lg-4 {
  text-align: center;
  margin-bottom: 30px;
  min-height: 285px;
}

.content img{
	height:140px;
	width:140px;
}

.content .col-lg-4 .container{
	width:100%;
	background-color: #ffffff;
	padding:15px;
	border-radius: 15px;
}

.content .col-lg-4 a{
	text-decoration: none;
	color: #191919;
	display:block;
}

.content .col-lg-4 .container:hover{
	background-color: #ccebf5;
	opacity: 80%;
}

.content h2 {
  font-weight: bold;
}

.content .col-lg-4 p {
  margin-bottom: 10px;
  font-size: 1em;
}

/* ABOUT BODY CONTENT
-------------------------------------------------- */
.about-content{
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 0px;
}

#about-jumbo{
	background-image: url(../img/sprials-compiled-banner.png);
	text-shadow: 3px 3px 4px rgba(0,0,0,.95);
	padding-top: .75em;
	min-height: 278px;
} 

#about-jumbo h1{
	font-weight: bold;
	text-align: center;
	color: #fff;
	margin-top: 85px;
}

#about-jumbo .intro-p{
	font-size: 1.3em;
	margin-bottom: 40px;
	text-align: center;
	max-width: 700px;
	margin-right: auto;
	margin-left:auto;
}

.about-content h1{
	font-weight: bold;
	text-align: center;
	color: #191919;
}

.about-content h2{
	font-weight: bold;
	font-size: 1.7em;
}

.about-content p{
  font-size: 1.2em;
  font-weight: 300;
}

.about-content strong{
	font-weight: 400;
}

.about-content footer p{
	font-size: 1em;
	font-weight: 400;
}

/* GALLERY BODY CONTENT
-------------------------------------------------- */

.gallery-content {
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 0px;
}

#gallery-jumbo{
	background-image: url(../img/gallery-jumbo-image.png);
	text-shadow: 1px 1px 2px rgba(0,0,0,.8);
	padding-top: .75em;
} 

#gallery-jumbo h1{
	font-weight: bold;
	text-align: center;
	color: #fff;
	margin-top: 50px;
}

#gallery-jumbo .intro-p{
	font-size: 1.3em;
	margin-bottom: 40px;
	text-align: center;
	max-width: 700px;
	margin-right: auto;
	margin-left:auto;
}

.gallery-content .col-lg-4 {
  text-align: center;
  margin-bottom: 30px;
}

.gallery-content .col-lg-4 .container{
	width:100%;
	background-color: #ffffff;
	padding:15px;
	border-radius: 15px;
}

.gallery-content .col-lg-4 a{
	text-decoration: none;
	color: #191919;
	display:block;
}

.gallery-content .col-lg-4 .container:hover{
	background-color: #ccebf5;
	opacity: 80%;
}

.gallery-content .title-container{
	min-height: 77px;
}

.gallery-content h2 {
  font-weight: bold;
  margin-top: 0px;
  font-size: 1.6em;
  text-align: left;
  margin-bottom: 5px;
}

.gallery-content h4 {
	text-align: left;
	color:#555;
	margin-top: 0px;
	font-weight: 300;
	font-size: 1.1em;
}

.gallery-content .image-container{
	width:300;
	height:169;
	position: relative;
	padding-bottom: 56.25%;
	padding-top: 10px;
	display: block;
	overflow: hidden;
}

.gallery-content .image-container img{
	position: absolute;
	display: block;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;
	margin: auto;
	max-height: 100%;
	max-width: 100%;
	/*object-fit: contain;*/
}

.gallery-content .col-lg-4 .container .video-container{
	position: relative;
	padding-bottom: 56.25%;
	padding-top:10px;
}

.gallery-content .video-container iframe{
	position: absolute;
	top:0;
	left: 0;
	width: 100%;
	height: 100%;
}

.gallery-content .info-container{
	position: relative;
	padding-bottom: 5%;
}

.gallery-content .profile-pic{
	height:50px;
	width:50px;
	position: absolute;
}


/* MAP 
-------------------------------------------------- */

.map {
  padding-right: 15px;
  padding-left: 15px;
  padding-top: 0px;
}

.map h3{
	font-weight: 300;
	text-align: center;
	font-size: 1.4em;
	margin-top: 0px;
	margin-bottom: 100px;
}

.map .map-container{
	padding-top: 20px;
}




/* FOOTER CONTENT 
-------------------------------------------------- */

footer .col-lg-8{
	padding: 0px;
	padding-bottom: 15px;
}

footer p{
	font-size: 1em;
	text-align: left;
	margin-bottom: 5px;
	clear: both;
}

footer #license{
	margin-top: 20px;
}

footer .col-lg-8 a{
	font-weight: bold;
	color:#0099cc;
}

footer .col-lg-8 a:hover{
	color: #191919;
	text-decoration: none;
}

footer #sponsor-logos{
	width:100%;
	height:25px;
	padding: 0px;
	margin-top: 0px;
}

footer #logo-macarthur{
/* 650x53px */
  display: block;
  float: left;
  background: url(../img/logo-macarthur-foundation.png) no-repeat;
  background-size: contain;
  background-position: center;
  width:257px;
  height:100%;
}

footer #logo-p2pu{
/* 686x212px */
  display: block;
  float: left;
  background: url(../img/p2pu-logo.png) no-repeat;
  background-size: contain;
  background-position: center;
  width:68px;
  height:100%;
  margin: 0px 15px 0px 20px;
}

footer #logo-medialab{
/* 883x106px */
  display: block;
  float: left;
  background: url(../img/medialab-logo-text.png) no-repeat;
  background-size: contain;
  background-position: center;
  width:175px;
  height:100%;
}

footer #logo-hewlett{
 /* 400x155px */
  display: block;
  float: left;
  background: url(../img/hewlett-foundation-logo.jpeg) no-repeat;
  background-size: contain;
  background-position: center;
  width:75px;
  height:100%;
  margin: 0px 15px 0px 0px;
 }

@media (max-width: 654px){
	footer #sponsor-logos{
		height:46px;
	}
	footer #logo-macarthur{
		margin-top: 7px;
		height: 50%;
	}
	footer #logo-p2pu{
		height:50%;
	}
	footer #logo-medialab{
		height:50%;
	}
	footer #logo-hewlett{
		height:50%;
		clear:both;
		margin-top: 7px;
		margin-left: -7px;
		margin-right: 10px;
	}
	
}

